# dakko-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
dakko/: __init__.py  __version__.py
dakko/base/: __init__.py  generic.py  models.py  pydantic.py  typing.py
dakko/mie/: __init__.py  main.py  models.py
